# vk-bs-app

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vkturn_loader.cpp
app/src/main/java/com/lumus/vkapp/: LumusVpnApplication.kt  MainActivity.kt
app/src/main/java/com/lumus/vkapp/data/local/: AppDatabase.kt  ProfileDao.kt  ProfileEntity.kt
app/src/main/java/com/lumus/vkapp/data/profile/: ProfileRepository.kt  ProfileSecretStore.kt
app/src/main/java/com/lumus/vkapp/data/settings/: AppSettingsRepository.kt
app/src/main/java/com/lumus/vkapp/di/: AppContainer.kt
app/src/main/java/com/lumus/vkapp/domain/: ConnectionOrchestrator.kt  ConnectionOrchestratorImpl.kt  ConnectionProfile.kt  ConnectionState.kt  ResolvedConnectionPlan.kt
app/src/main/java/com/lumus/vkapp/transport/: ProxyManager.kt  ProxySessionConfig.kt  VkCallLinkParser.kt  VkTurnExecutableLoader.kt  VkTurnProxyService.kt
app/src/main/java/com/lumus/vkapp/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/lumus/vkapp/ui/theme/: Theme.kt
app/src/main/java/com/lumus/vkapp/wireguard/: WireGuardConfigRewriter.kt  WireGuardTunnelManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/lumus/vkapp/: ConnectionOrchestratorImplTest.kt  TestFixtures.kt  VkCallLinkParserTest.kt  WireGuardConfigRewriterTest.kt
gradle/: libs.versions.toml
